unpackaged/main/default/objects/Philanthropic_History__c/Philanthropic_History__c.object-meta.xml
<CustomObject>
    <description>This object will hold the philanthropic information gathered about a donor.</description>
    <label>Philanthropic History</label>
    <nameField>
        <label>Organization Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Philanthropic History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>