unpackaged/main/default/objects/Philanthropic_History__c/fields/Donor__c.field-meta.xml
<CustomField>
    <fullName>Donor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Donor</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Philanthropic History</relationshipLabel>
    <relationshipName>Philanthropic_History</relationshipName>
    <type>Lookup</type>
</CustomField>