unpackaged/main/default/objects/Philanthropic_History__c/fields/Gift_Amt_Range_High__c.field-meta.xml
<CustomField>
    <fullName>Gift_Amt_Range_High__c</fullName>
    <label>Gift Amt (Range High)</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>