unpackaged/main/default/objects/Philanthropic_History__c/fields/Gift_Year__c.field-meta.xml
<CustomField>
    <fullName>Gift_Year__c</fullName>
    <label>Gift Year</label>
    <length>4</length>
    <type>Text</type>
</CustomField>