unpackaged/main/default/objects/Philanthropic_History__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <label>Source</label>
    <type>TextArea</type>
</CustomField>