unpackaged/main/default/objects/Philanthropic_History__c/fields/Subcategory__c.field-meta.xml
<CustomField>
    <fullName>Subcategory__c</fullName>
    <label>Subcategory</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Arts/Culture</fullName>
            </value>
            <value>
                <fullName>Climate</fullName>
            </value>
            <value>
                <fullName>Community Development</fullName>
            </value>
            <value>
                <fullName>Ecosystems- Agriculture</fullName>
            </value>
            <value>
                <fullName>Ecosystems- Land/Water</fullName>
            </value>
            <value>
                <fullName>Ecosystems- Parks/Gardens</fullName>
            </value>
            <value>
                <fullName>Ecosystems- Wildlife/Animals</fullName>
            </value>
            <value>
                <fullName>Education</fullName>
            </value>
            <value>
                <fullName>Energy</fullName>
            </value>
            <value>
                <fullName>Environmental Health</fullName>
            </value>
            <value>
                <fullName>Healthcare - Advocacy</fullName>
            </value>
            <value>
                <fullName>Healthcare - Hospitals</fullName>
            </value>
            <value>
                <fullName>Healthcare - Research</fullName>
            </value>
            <value>
                <fullName>Higher Education</fullName>
            </value>
            <value>
                <fullName>Humanitarian Aid</fullName>
            </value>
            <value>
                <fullName>Human Services</fullName>
            </value>
            <value>
                <fullName>International</fullName>
            </value>
            <value>
                <fullName>Legal/Advocacy</fullName>
            </value>
            <value>
                <fullName>Literacy</fullName>
            </value>
            <value>
                <fullName>Natural History</fullName>
            </value>
            <value>
                <fullName>Oceans</fullName>
            </value>
            <value>
                <fullName>Public Policy</fullName>
            </value>
            <value>
                <fullName>Religion Related</fullName>
            </value>
            <value>
                <fullName>Science</fullName>
            </value>
            <value>
                <fullName>Women</fullName>
            </value>
            <value>
                <fullName>Youth Development</fullName>
            </value>
            <value>
                <fullName>Other environmentally related</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>