unpackaged/main/default/objects/Philanthropic_History__c/listViews/All_Philanthropic_History.listView-meta.xml
<ListView>
    <fullName>All_Philanthropic_History</fullName>
    <columns>NAME</columns>
    <columns>Donor__c</columns>
    <columns>Category__c</columns>
    <columns>Subcategory__c</columns>
    <columns>Gift_Type__c</columns>
    <columns>Gift_Year__c</columns>
    <columns>Gift_Amt_Range_High__c</columns>
    <columns>Gift_Amt_Range_Low__c</columns>
    <columns>Source__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Philanthropic History</label>
</ListView>